--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 GOOGLE_MAPS_API_KEY= AIzaSyBIBPihu3Pb5QMgNvvWh1g_0gCUEBuDIQo
+MODEL_URL= 'https://storage.googleapis.com/model-production-chownow/model-in-prod/model.json'
