--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^7.11.2",
     "@hapi/hapi": "^21.3.9",
+    "@tensorflow/tfjs-node": "3.1.0",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5"
   }
