--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "dependencies": {
     "@google-cloud/storage": "^7.11.2",
     "@hapi/hapi": "^21.3.9",
-    "@tensorflow/tfjs-node": "3.1.0",
+    "@tensorflow/tfjs-node": "^4.20.0",
     "axios": "^1.7.2",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "mysql": "^2.18.1"
   }
 }
