--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MODEL_URL= 'https://storage.googleapis.com/model-production-chownow/model-in-prod8/model%20(5).json'
-DB_USER=chownow
-DB_PASSWORD=chownow123
-DB_NAME=chownow-db
-DB_HOST=34.128.125.103 
+DB_USER='root'
+DB_PASSWORD='chownow123'
+DB_NAME='chownow-db'
+DB_HOST='34.128.125.103'
