--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "@hapi/hapi": "^21.3.9",
     "@tensorflow/tfjs-node": "^4.20.0",
     "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
-    "mysql": "^2.18.1"
+    "jsonwebtoken": "^9.0.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.10.1",
+    "sequelize": "^6.37.3"
   }
 }
