--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
+    "ml-array-utils": "^0.4.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.10.1",
     "sequelize": "^6.37.3"
